# jax-knn

./: CMakeLists.txt  README.md  demo.ipynb  pyproject.toml  setup.py
.github/action/: entrypoint.sh
lib/: cpu_ops.cc  gpu_ops.cc  kdknn.h  kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h
src/kdknn_jax/: __init__.py  kdknn_jax.py
tests/: test_kdknn_jax.py
